--- a/src/data/_sponsors.yaml
+++ b/src/data/_sponsors.yaml
@@ -115,6 +115,13 @@
 -
   level_silver: 1
   level: silver
+  logo: http://pyconcn.qiniucdn.com/zoomquiet/stuff15/logo/uc_logo.png?imageView2/2/w/120
+  link: http://uc.cn
+  intro: "阿里巴巴移动事业群，以移动互联网领军企业UC优视为基础，整合阿里巴巴集团相关优势资源组建, 旗下拥有UC浏览器、神马搜索、九游、阿里文学、PP助手等多个行业领先的移动互联网产品及平台，为用户提供多领域、全方位的移动互联网服务。阿里移动事业群专注移动互联网业务创新，致力于打造简单，可信赖的移动互联网信息服务平台，用技术和数据创造变量。"
+  intro_en: "Ganguo Mobile is the most well-known development team in Pearl River Delta. With years of experience in mobile application and web development; our specialists offer cost-effective mobile solution and maintenance program. The integration of our experience; creativity and vision has helped us to deliver concrete product with great satisfaction to our clients.  Our main business are mobile app development (iOS / Android); development and implementation of Wechat services account; big data analysis and other mobile related territory. We have been working with leading brands in information technology/ automobile/ consumer product/ real estate/ Internet/ finance/ and entertainment business."
+-
+  level_silver: 1
+  level: silver
   logo: http://pyconcn.qiniucdn.com/zoomquiet/stuff15/logo/ganguoio_h.png?imageView2/2/w/120
   link: http://www.ganguo.io
   intro: "我们是珠三角地区最知名的实力移动外包团队，团队成员多年从事相关工作，拥有丰富的开发运营经验，能够为您的项目提高最高效率的开发和最高质量的维护，我们丰富的经验，源源不断的创意以及领先行业的见识，都为您的项目打下最坚实的基础。    公司主营业务为APP产品研发，微信端服务账号的应用与研发，大数据分析等与移动互联相关的业务。我们的客户涵盖了信息技术、汽车、消费品、房地产、互联网、金融、文化娱乐等行业的领导品牌。 "
