--- a/src/data/_speakers.yaml
+++ b/src/data/_speakers.yaml
@@ -355,17 +355,6 @@ id_nonegz:
     slide: #
 
 ####################################################################
-#   珠三角
-#    ______   _
-#   |__  / | | |
-#     / /| |_| |
-#    / /_|  _  |
-#   /____|_| |_|
-####################################################################
-
-
-
-####################################################################
 #   帝都
 #    ____  _
 #   | __ )(_)
@@ -649,4 +638,50 @@ id_none:
     slide: #
 
 
+####################################################################
+#   杭州
+#    _   _ _____
+#   | | | |__  /
+#   | |_| | / /
+#   |  _  |/ /_
+#   |_| |_/____|
+#   
+####################################################################
+id_nonehz:
+  name: TBD
+  city_hangzhou: 1
+  city: 杭州
+  city_en: Hangzhou
+  avatar: http://pyconcn.qiniudn.com/zoomquiet/stuff14/cpug-logo-188x188.png?imageView2/2/h/80
+  intro:  ??
+  intro_en: Pythoneer...
+  topic:
+    title: "?"
+    title_en: "?"
+    preview: ...
+    preview_en: ...
+    slide: #
 
+####################################################################
+#   苏州
+#    ____ _____
+#   / ___|__  /
+#   \___ \ / /
+#    ___) / /_
+#   |____/____|
+#   
+####################################################################
+id_nonesz:
+  name: TBD
+  city_suzhou: 1
+  city: 苏州
+  city_en: Suzhou
+  avatar: http://pyconcn.qiniudn.com/zoomquiet/stuff14/cpug-logo-188x188.png?imageView2/2/h/80
+  intro:  ??
+  intro_en: Pythoneer...
+  topic:
+    title: "?"
+    title_en: "?"
+    preview: ...
+    preview_en: ...
+    slide: #
