--- a/src/data/_nav.yaml
+++ b/src/data/_nav.yaml
@@ -1,7 +1,7 @@
-- title: 主题
-  title_en: PROPOSALS
-  url: "proposals.html"
-  url_en: "en/proposals.html"
+- title: 讲师
+  title_en: SPEECH
+  url: "speechmaker.html"
+  url_en: "en/speechmaker.html"
 - title: 赞助
   title_en: SUPPORT
   children:
