--- a/src/data/_agenda.yaml
+++ b/src/data/_agenda.yaml
@@ -25,7 +25,7 @@ shanghai:
     - { time: "09:30", speaker: id_jiekong }
     - { time: "10:00", speaker: id_yankaish }
     - { time: "10:45", speaker: id_shenweish }
-    - { time: "11:30", speaker: id_shell909090 }
+    - { time: "11:30", speaker: id_liepin1sh }
   noon:
     - time: "12:00"
       topic: 午餐+合照
@@ -34,19 +34,20 @@ shanghai:
     - { time: "13:30", speaker: id_liang2 }
     - { time: "14:00", speaker: id_jiankongbaosh }
     - { time: "14:30", speaker: id_dinglaiqiangsh }
-    - { time: "15:00", speaker: id_liepin1sh }
+    - { time: "15:00", speaker: id_chenhaibo }
     - time: "15:30"
       topic: 茶歇
       topic_en: Intermission
-    - { time: "15:40", speaker: id_chenhaibo }
-    - { time: "16:10", speaker: id_wangliqi }
-    - { time: "16:45", speaker: id_xuzhou }
-    - { time: "17:15", speaker: id_nonesh }
+    - { time: "15:40", speaker: id_wangliqi }
+    - { time: "16:10", speaker: id_xuzhou }
+    - { time: "16:45", speaker: id_shell909090 }
+    - { time: "17:15", speaker: id_xiaokai }
   lightening_talks:
-    - { time: "17:30", speaker: id_xiaokai }
-    - { time: "17:40", speaker: id_nonesh }
+    - { time: "17:30", speaker: id_derek }
+    - { time: "17:40", speaker: id_chendawei }
+    - { time: "17:50", speaker: id_kj }
   cancel_talks:
-    # - { time: "(ー`´ー)", speaker: id_nonesh }
+    - { time: "(ー`´ー)", speaker: id_nonesh }
 
 
 ####################################################################
@@ -75,8 +76,8 @@ guangzhou:
     - time: "09:45"
       topic: "开场"
       topic_en: "Opening"
-    - { time: "10:00", speaker: id_jeffgz }
-    - { time: "10:45", speaker: id_JokerQyou }
+    - { time: "10:00", speaker: id_shenweigz }
+    - { time: "10:45", speaker: id_laiyonghaogz }
     - { time: "11:15", speaker: id_river }
   noon:
     - time: "12:00"
@@ -84,13 +85,13 @@ guangzhou:
       topic_en: Lunch + Photo
   afternoon:
     - { time: "13:30", speaker: id_liang2 }
-    - { time: "14:00", speaker: id_shenweigz }
-    - { time: "14:40", speaker: id_laiyonghaogz }
+    - { time: "14:00", speaker: id_jiankongbaogz }
+    - { time: "14:40", speaker: id_JokerQyou }
     - { time: "15:20", speaker: id_zuozhenjie }
     - time: "16:00"
       topic: 茶歇
       topic_en: Intermission
-    - { time: "16:10", speaker: id_nonegz }
+    - { time: "16:10", speaker: id_jeffgz }
     - { time: "17:00", speaker: id_nonegz }
   lightening_talks:
     - { time: "17:30", speaker: id_nonegz }
@@ -123,30 +124,31 @@ beijing:
       topic: "开场"
       topic_en: "Opening"
     - { time: "09:30", speaker: id_liepin2bj }
-    - { time: "10:00", speaker: id_yankaibj }
-    - { time: "10:20", speaker: id_wuke }
-    - { time: "10:55", speaker: id_jiankongbaobj }
-    - { time: "11:30", speaker: id_zhengk }
+    - { time: "10:00", speaker: id_wuke }
+    - { time: "10:20", speaker: id_yankaibj }
+    - { time: "10:55", speaker: id_liepin1bj }
+    - { time: "11:30", speaker: id_liaoxinxi }
   noon:
     - time: "12:00"
       topic: 午餐+合照
       topic_en: Lunch + Photo
   afternoon:
     - { time: "13:30", speaker: id_liang2 }
-    - { time: "14:00", speaker: id_liepin1bj }
-    - { time: "14:40", speaker: id_liaoxinxi }
-    - { time: "15:20", speaker: id_dinglaiqiang }
+    - { time: "14:00", speaker: id_dinglaiqiang }
+    - { time: "14:40", speaker: id_xiutao }
+    - { time: "15:20", speaker: id_zhengk }
     - time: "16:00"
       topic: 茶歇
       topic_en: Intermission
-    - { time: "16:10", speaker: id_huangjin }
+    - { time: "16:10", speaker: id_liuchang }
     - { time: "17:00", speaker: id_linpan }
   lightening_talks:
     - { time: "17:30", speaker: id_chifeng }
     - { time: "17:40", speaker: id_ZhiliWang }
-    - { time: "17:50", speaker: id_zhongww }
-    - { time: "18:00", speaker: id_dujun }
-    - { time: "18:10", speaker: id_yuzhanyong }
+    - { time: "17:45", speaker: id_zhongww }
+    - { time: "17:50", speaker: id_dujun }
+    - { time: "17:55", speaker: id_yuzhanyong }
+    - { time: "18:00", speaker: id_huangjin }
 
   cancel_talks:
     # - { time: "(ー`´ー)", speaker: id_none }
