--- a/src/data/_site.yaml
+++ b/src/data/_site.yaml
@@ -1,4 +1,4 @@
-name: PyCon2015China
+name: PyConChina2015
 description: Python中国2015大会官方网站
 description_en: The official site for PyCon China 2015
 author: support@PyChina.org
