--- a/src/data/_speakers.yaml
+++ b/src/data/_speakers.yaml
@@ -194,9 +194,9 @@ id_jiankongbaosh:
   intro:  云智慧高级架构师，是PHP开发组成员，同时也是PECL/SeasLog的作者.10年研发管理经验，早期从事大规模企业信息化研发架构，09年涉足互联网数字营销领域并深入研究架构与性能优化。2014年加入云智慧，致力于APM产品的架构与研发。崇尚敏捷，高效，GettingReal。
   intro_en: Pythoneer...
   topic:
-    title: "让Python应用快如闪电-python应用性能管理实践"
+    title: "让Python应用快如闪电"
     title_en: "?"
-    preview: ...
+    preview: python应用性能管理实践
     preview_en: ...
     slide: #
 
