--- a/src/data/_agenda.yaml
+++ b/src/data/_agenda.yaml
@@ -147,12 +147,11 @@ beijing:
   lightening_talks:
     - { time: "17:30", speaker: id_chifeng }
     - { time: "17:40", speaker: id_zhongww }
-    - { time: "17:45", speaker: id_dujun }
-    - { time: "17:50", speaker: id_yuzhanyong }
-    - { time: "17:55", speaker: id_huangjin }
+    - { time: "17:45", speaker: id_yuzhanyong }
+    - { time: "17:50", speaker: id_huangjin }
 
   cancel_talks:
-    # - { time: "(ー`´ー)", speaker: id_none }
+    - { time: "(ー`´ー)", speaker: id_dujun }
 
 
 ####################################################################
