--- a/src/data/_sponsors.yaml
+++ b/src/data/_sponsors.yaml
@@ -44,6 +44,13 @@
   link: http://www.jiankongbao.com/
   intro: "云智慧(北京)科技有限公司成立于2009年,是国内领先的应用性能管理服务商. 基于大数据分析,为企业级用户提供全面,专业的端到端的应用性能管理(End To End Application Performance Management)解决方案. Cloudwise SaaS APM累计已为电子商务,移动互联网,IaaS云服务,在线游戏,教育医疗等行业的几十万用户提供了前瞻性的智慧性能管理服务,是新一代应用性能管理(APM)的领导者. "
   intro_en: "CloudSmart (Beijing)  technology co., LTD founded in 2009 ,that is a leading domestic application performance management service providers. Based on big data analysis, for enterprise users to provide the solution of End To End Application Performance Management comprehensive. For electronic commerce, mobile Internet, cloud IaaS service, online game, education and  the medical industry users provided a forward-looking & wisdom application performance management" 
+-
+  level_diamond: 1
+  level: diamond
+  logo: http://pyconcn.qiniudn.com/zoomquiet/stuff15/logo/ouyeel_logo.jpg?imageView2/2/w/200
+  link: http://ouyeel.com/help/about-us.html
+  intro: "上海钢铁交易中心于2013年5月31日在宝山区成立。是一家由隶属于宝钢国际，由宝钢国际及宝山区市政府共同出资的企业。上海钢铁交易中心围绕上海钢铁现代服务业综合试点区钢铁交易、信息、物流、金融、研发、再生资源等六大功能定位，打破所有制界限，实现跨所有制联合行业龙头企业中的央企、民营企业、地方企业强强联合，打造钢铁行业国际领先的网上电子服务平台，形成以大生产、大流通、大市场为特点的钢铁供应链服务体系，提升我国钢铁行业在国际市场上的定价权和话语权。"
+  intro_en: "..." 
 
 #########################################
 #   白金级
