--- a/src/data/_sponsors.yaml
+++ b/src/data/_sponsors.yaml
@@ -49,7 +49,7 @@
   level: diamond
   logo: http://pyconcn.qiniudn.com/zoomquiet/stuff15/logo/ouyeel_logo.jpg?imageView2/2/w/200
   link: http://ouyeel.com/help/about-us.html
-  intro: "上海钢铁交易中心于2013年5月31日在宝山区成立。是一家由隶属于宝钢国际，由宝钢国际及宝山区市政府共同出资的企业。上海钢铁交易中心围绕上海钢铁现代服务业综合试点区钢铁交易、信息、物流、金融、研发、再生资源等六大功能定位，打破所有制界限，实现跨所有制联合行业龙头企业中的央企、民营企业、地方企业强强联合，打造钢铁行业国际领先的网上电子服务平台，形成以大生产、大流通、大市场为特点的钢铁供应链服务体系，提升我国钢铁行业在国际市场上的定价权和话语权。"
+  intro: "上海钢铁交易中心（SHGT.com）是隶属于欧冶云商旗下的钢铁B2B电商平台。作为“互联网+钢铁”的先驱者，致力于为上下游企业提供交易、物流、加工、金融、技术、信息等全流程一站式服务，创造超越期望的价值体验。经过两年多的发展，客户数已经超过8.５万家 ，交易量超过1，060万吨 ，结算金额超过3００亿元 ，以其高度智能化的系统、专业可靠的服务走在了同行前列，目标在3年内成为全球第一的钢铁电商网站。智慧平台，让钢铁交易更简单。"
   intro_en: "..." 
 
 #########################################
