--- a/src/data/_sponsors.yaml
+++ b/src/data/_sponsors.yaml
@@ -6,7 +6,7 @@
   level: partner
   logo: http://dn-pyconcn.qbox.me/zoomquiet/stuff15/logo/shpudongsp_logo.png?imageView2/2/w/200
   link: http://www.spsp.com.cn/
-  intro: '上海浦东软件园股份有限公司成立于1992年7月,由原信息产业部和上海市人民政府共同组建,承担"国家软件产业基地","国家软件出口基地"---上海浦东软件园园区规划建设,经营管理和产业发展的重要任务,是上海浦东软件园建设的主体. 注册资本3亿元人民币. 公司地处上海浦东张江高科技园区. 除负责园区开发建设外,公司着重于园区服务体系建设,进行产业投资和软件研发.'
+  intro: "上海浦东软件园是上海乃至全国的软件产品、技术和人才的集散地;拥有健全的基础设施配套、共性的技术支撑平台、良好的企业服务体系、必要的生产力要素市场、完善的企业创新与孵化机制、强大的产业集群力量，从而成为可供居住、学习、工作及休闲娱乐为一体的全方位生态社区。  上海浦东软件园致力于打造世界级软件产业创新社区。"
   intro_en: "..."
 -
   level_partner: 1
