--- a/src/data/_sponsors.yaml
+++ b/src/data/_sponsors.yaml
@@ -50,7 +50,7 @@
   logo: http://pyconcn.qiniudn.com/zoomquiet/stuff15/logo/ouyeel_logo.jpg?imageView2/2/w/200
   link: http://ouyeel.com/help/about-us.html
   intro: "上海钢铁交易中心（SHGT.com）是隶属于欧冶云商旗下的钢铁B2B电商平台。作为“互联网+钢铁”的先驱者，致力于为上下游企业提供交易、物流、加工、金融、技术、信息等全流程一站式服务，创造超越期望的价值体验。经过两年多的发展，客户数已经超过8.５万家 ，交易量超过1，060万吨 ，结算金额超过3００亿元 ，以其高度智能化的系统、专业可靠的服务走在了同行前列，目标在3年内成为全球第一的钢铁电商网站。智慧平台，让钢铁交易更简单。"
-  intro_en: "..." 
+  intro_en: "...." 
 
 #########################################
 #   白金级
