--- a/src/data/_sponsors.yaml
+++ b/src/data/_sponsors.yaml
@@ -50,7 +50,7 @@
   logo: http://pyconcn.qiniudn.com/zoomquiet/stuff15/logo/ouyeel_logo.jpg?imageView2/2/w/200
   link: http://ouyeel.com/help/about-us.html
   intro: "上海钢铁交易中心（SHGT.com）是隶属于欧冶云商旗下的钢铁B2B电商平台。作为“互联网+钢铁”的先驱者，致力于为上下游企业提供交易、物流、加工、金融、技术、信息等全流程一站式服务，创造超越期望的价值体验。经过两年多的发展，客户数已经超过8.５万家 ，交易量超过1，060万吨 ，结算金额超过3００亿元 ，以其高度智能化的系统、专业可靠的服务走在了同行前列，目标在3年内成为全球第一的钢铁电商网站。智慧平台，让钢铁交易更简单。"
-  intro_en: "...." 
+  intro_en: "Shanghai Steel Trading Centre (SHGT.com) is a B2B steel e-business platform invested by Baosteel Group in 2013. As a leading company, we provide one-stop service including consulting, transaction, finance, metallic processing, logistics and so forth. During the past year, we created more than 85,000 registered platform memberships. The annual business volume online is over 10.6 million tons; revenue is around 5 billion USD.With our Intelligent Platform, you will have Simpler Business. OUYEEL!" 
 
 #########################################
 #   白金级
