fixed https://github.com/PyConChina/PyConCN/issues/104 for DGZ

--- a/src/data/_sponsors.yaml
+++ b/src/data/_sponsors.yaml
@@ -172,3 +172,10 @@
   logo: http://pyconcn.qiniucdn.com/zoomquiet/stuff15/logo/easydo_logo.png?imageView2/2/w/60
   link: http://easydo.cn
   intro: "易开发，是一家为开发者提供企业应用快速开发平台的公司。目前专注于微信企业号的快速（无码）定制开发方案。在当前互联网+浪潮中，我们帮助企业多快好省地迈向互联网化和信息化。我们在丰厚企业信息化基础设施之上，提供了创新的、人性化开发工具，极大地降低开发者门槛，提升开发效率，降低了项目开发和维护成本。"
+-
+  level_bronze: 1
+  level: bronze
+  logo: http://pyconcn.qiniucdn.com/zoomquiet/stuff15/logo/gitcafe_logo.png?imageView2/2/w/60
+  link: https://gitcafe.com/
+  intro: "GitCafe是一个基于代码托管服务打造的技术协作与分享平台，程序开发爱好者们可以通过使用代码版本控制系统Git来将他们所写的开源或商业项目的代码托管在GitCafe上，与其他程序员针对这些项目在线协作开发。两天前，GitCafe结束了长达数月的Alpha封闭测试，发布了第一个Beta版本，现无需邀请码，所有人都能够开始注册使用GitCafe所提供的代码托管服务 。"
+  intro_en: "D.G.Z was founded by Thomas Yao at the end of 2012 in Shanghai, China. Our mission is to improve the Information Technology education ecosystem around the world.We are building two bridges to connect people, one is from college and middle school students to real world projects, the other one is from China to western countries and vice versa."
