--- a/src/data/_sponsors.yaml
+++ b/src/data/_sponsors.yaml
@@ -162,6 +162,14 @@
   logo: http://pyconcn.qiniucdn.com/zoomquiet/stuff15/logo/tuputech_logo_d.png?imageView2/2/w/120
   link: http://www.tuputech.com/
   intro: "图普科技是一家站在人工智能前沿的创业科技公司，专注于图像识别技术，成员来自国内顶尖互联网公司和名校研究院。公司在成立之初即与国内顶尖大学人工智能实验室达成战略合作，拥有出色的技术研发能力，并已取得业内多项第一和首创。我们为企业提供图像和视频智能审核、图片搜索、图像分类、深度定制服务。基于深度学习理论，图普搭建并开放了国内首个图像识别云平台，目前合作的企业包括七牛云、融云、迅雷、酷狗、花瓣网等国内优秀互联网公司，业务规模在快速发展中。 "
+-
+  level_silver: 1
+  level: silver
+  logo: http://pyconcn.qiniucdn.com/zoomquiet/stuff15/logo/dingdone_logo.png?imageView2/2/w/120
+  link: http://www.dingdone.com/
+  intro: "叮当Dingdone是一款移动应用自助生产运营平台，主要支持大众用户通过“叮当”来DIY开发APP，仅需分分钟，即可一键打包并同时生成适配于iOS、Android系统的Native原生应用程序和H5网页。与市场上基于HTML5打包的Web APP制作工具不同，依托于云技术的叮当提出了原生应用仓库的概念，通过丰富的风格、列表、功能模板以及强大且细粒度的属性参数，支撑APP的表现定义和样式变化。同时，它还能够为开发者提供H5 SDK和API，让用户可以嵌入不同数据和内容，十分便捷。“叮当”有别于简单粗暴的复制模式，已具备相当完善的设备功能和交互体验，用户可最大化发挥自定义空间，在云平台上创建、管理及生成一款别具一格的原生应用程序。利用“叮当”，即使是不懂编程和设计知识的普通人也能够信手拈来， APP制作者只需要通过“搭积木”的方式即可完成跨平台原生应用开发。"
+
+
 
 #########################################
 #   青铜级
