--- a/src/data/_sponsors.yaml
+++ b/src/data/_sponsors.yaml
@@ -159,9 +159,11 @@
 -
   level_silver: 1
   level: silver
-  logo: http://pyconcn.qiniucdn.com/zoomquiet/stuff15/logo/tuputech_logo_d.png?imageView2/2/w/120
+  logo: http://pyconcn.qiniucdn.com/zoomquiet/stuff15/logo/tuputech_logo_d.jpg?imageView2/2/w/120
   link: http://www.tuputech.com/
   intro: "图普科技是一家站在人工智能前沿的创业科技公司，专注于图像识别技术，成员来自国内顶尖互联网公司和名校研究院。公司在成立之初即与国内顶尖大学人工智能实验室达成战略合作，拥有出色的技术研发能力，并已取得业内多项第一和首创。我们为企业提供图像和视频智能审核、图片搜索、图像分类、深度定制服务。基于深度学习理论，图普搭建并开放了国内首个图像识别云平台，目前合作的企业包括七牛云、融云、迅雷、酷狗、花瓣网等国内优秀互联网公司，业务规模在快速发展中。 "
+  intro_en: "Tupu Technology Co.,Ltd. is a venture company which is at the forefront of artificial intelligence industry, and it gathered excellent members from both outstanding technology companies and universities in China. Tupu Technology made cooperation with a remarkable national laboratory from the very beginning and keep devote themselves into the field of computer vision, and that’s why they have achieved several pioneered techniques and widely recognition in the industry.Tupu company can provide intelligent censorship, image-search engine, image classification and custom-made services. What’s more, based on deep learning algorithm, it has built the first open platform for image recognition in China."
+
 -
   level_silver: 1
   level: silver
