appended fb as platinum

--- a/src/data/_sponsors.yaml
+++ b/src/data/_sponsors.yaml
@@ -58,6 +58,13 @@
 -
   level_platinum: 1
   level: platinum
+  logo: http://pyconcn.qiniucdn.com/zoomquiet/stuff15/logo/facebook_2015_logo_detail.png?imageView2/2/h/90
+  link: https://www.facebook.com/
+  intro: "公司成立于2004年，Facebook的使命是让人们更加愿意分享，并让世界更加开放和连接。人们使用Facebook保持联系与朋友和家人，共同探索世界，并分享和表达任何事物。"
+  intro_en: "Founded in 2004, Facebook’s mission is to give people the power to share and make the world more open and connected. People use Facebook to stay connected with friends and family, to discover what’s going on in the world, and to share and express what matters to them."
+-
+  level_platinum: 1
+  level: platinum
   logo: http://pyconcn.qiniucdn.com/zoomquiet/stuff15/logo/GizWits_logo_y.png?imageView2/2/h/90
   link: http://www.gizwits.com/
   intro: "机智云（GizWits）是国内第一个智能硬件自助开发和云服务平台, 为开发者提供快捷的智能硬件开发工具，为智能硬件厂家提供一站式物联网开发和运维服务，目前服务的客户来自消费类智能硬件厂家（含智能家居、智能硬件、可穿戴产品）、工业及商业应用客户、智慧城市建设及创新创业支持等，至2015年机智云平台受到全球超过300家客户信赖，平台激活智能硬件设备全球出货总量超过 300 万台，是目前国内外最大的智能硬件集群之一。"
